tests/error/undefined_name.ca

f = {
    add(a b c)
}.block

actor = make_actor(f)

actor.call

assert(actor.errored)
